--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
+<head>
+	<meta charset="UTF-8">
+	<title>Portfolio</title>
+	<meta name="description" contens="ポートフォリオ">
+	<link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+	<header class="page-header wrapper">
+		<h1>PORTFOLIO</h1>
+		<!--		<nav>-->
+		<!--			<ul class="main-nav">-->
+		<!--				<li class="top">-->
+		<!--					<a href="">TOP</a>-->
+		<!--				</li>-->
+		<!--				<li class="profile">-->
+		<!--					<a href="">PROPFILE</a>-->
+		<!--				</li>-->
+		<!--				<li class="works">-->
+		<!--					<a href="">WORKS</a>-->
+		<!--				</li>-->
+		<!--			</ul>-->
+		<!--		</nav>-->
+	</header>
+	<div id="main">
+		<h2>PROFILE</h2>
+		<div class="profile">
+			<div class="item00">
+				<h3>名前</h3>
+				<p>村瀬 菜水香<br>
+					murase namika</p>
+				<h3>誕生日</h3>
+				<p>2004/XX/XX</p>
+				<h3>趣味</h3>
+				<p>音楽を聴くこと。特に邦ロックをよく聞いてます。</p>
+			</div>
+			<div class="item00">
+				<h3>経歴</h3>
+				<p>
+					商業高校を卒業後一般企業に就職。<br>
+					オフィス什器などの搬入出作業等を行う会社の現場社員として勤務<br>
+					IT業界へ働きたい思いが強く転職活動を経て現在の会社に就職<br>
+					入社後は、３カ月の研修を受講
+				</p>
+			</div>
+		</div>
+		<h2>SLKL</h2>
+		<div class="skil">
+			<div class="item01">
+				<h3>言語</h3>
+				<p>Java,Oracle,HTML,CSS,Spring,JavaScript<br>
+					３カ月の研修期間で学習しました。</p>
+			</div>
+			<div class="item01">
+				<h3>コーディング</h3>
+				<p>
+					基本的なコーディングを行うことが可能です。<br>
+					誰が見てもわかりやすいコーディングを心がけています。
+				</p>
+			</div>
+			<div class="item01">
+				<h3>演習</h3>
+				<p>
+					研修の中でチーム開発演習を実施しました。<br>
+					JDBCを使った社員管理システムなどを制作しました。その過程でチームでのコミュニケーションや、協力して作り上げるという経験をすることができました。
+				</p>
+			</div>
+		</div>
+		<h2>WORKS</h2>
+		<div class="works">
+			<div class="item02">
+				<div class="title">練習問題</div>
+				<p>毎日講義の最後に今日学んだ内容の練習問題に取り組んできました。<br>
+					また、翌日の朝にも振り返り演習として数問の問題に取り組みました。
+				</p>
+			</div>
+			<div class="item03">
+				<div class="title">開発演習</div>
+				<p>単元の終わりごとに今まで学んできた内容のコーディングが行えるかどうかの開発演習です。<br>
+					Javaの開発演習では基礎レベルは実装することができました。
+				</p>
+			</div>
+			<div class="item04">
+				<div class="title">社員管理システム</div>
+				<p>各２人ずつのチームに分かれてJava,Oracle,JDBCを使用した社員管理システムの開発に取り組みました。<br>
+					仕様書に記載されていた機能に加えログイン機能など３つの機能を追加機能として開発しました。<br>
+					チーム演習ということもあり、コミュニケーションや競合の解決などを学ぶことができました。
+				</p>
+			</div>
+			<div class="item05">
+				<div class="title">Spring社員管理アプリ</div>
+				<p>comming soon...</p>
+			</div>
+		</div>
+	</div>
+	</div>
+	<footer class="page-footer">
+		<h3 class="heading-large font-english">Information</h3>
+		<table class="info">
+			<tr>
+				<th>会社名</th>
+				<td>株式会社ブレイン・ゲート</td>
+			</tr>
+			<tr>
+				<th>住所</th>
+				<td>〒450-0002<br>  名古屋市中村区名駅四丁目22-22
+名駅ＫＭビル7F            
+					</td>
+			</tr>
+			<tr>
+				<th>電話番号</th>
+				<td>052-581-2911</tb>
+			</tr>
+		</table>
+
+		<div class="copyright">
+			<small>&copy; 2025 portfolio</small>
+		</div>
+	</footer>
 </body>
+
 </html>
