--- a/public/html/index.html
+++ b/public/html/index.html
@@ -94,6 +94,17 @@
 				<div class="title">Spring社員管理アプリ</div>
 				<p>comming soon...</p>
 			</div>
+			<div class="link">
+				<h3>GitリポジトリのURL</h3>
+				<div class="link-page1">
+				<p>練習問題・開発演習</p>
+				<a href="https://github.com/murase67/kennsyuu">練習問題・開発演習URLはこちら</a>
+				</div>
+				<div class="link-page2">
+				<p>社内管理システム</p>
+				<a href="https://github.com/sakurai-onaka/RepositoryOfAnimal">社内管理システムURLはこちら</a>
+				</div>
+			</div>
 		</div>
 	</div>
 	</div>
@@ -106,9 +117,9 @@
 			</tr>
 			<tr>
 				<th>住所</th>
-				<td>〒450-0002<br>  名古屋市中村区名駅四丁目22-22
-名駅ＫＭビル7F            
-					</td>
+				<td>〒450-0002<br> 名古屋市中村区名駅四丁目22-22
+					名駅ＫＭビル7F
+				</td>
 			</tr>
 			<tr>
 				<th>電話番号</th>
